--- a/css/style.css
+++ b/css/style.css
@@ -11,29 +11,41 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+  
 }
 .header-main {
-  background-image:url(../img/section/Therapists.jpeg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/section/Therapists.jpeg);
+
   height: 70vh;
   background-position: top;
   background-repeat: no-repeat;
+  font-family: 'Montserrat', sans-serif;
 }
 .header-service-massage {
-  background-image: url(../img/section/massage-service.jpeg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/section/massage-service.jpeg);
+
   background-position: bottom;
+  font-family: 'Montserrat', sans-serif;
 }
 .header-service-naturopathic {
-  background-image: url(../img/section/header-naturopathic.jpeg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/section/header-naturopathic.jpeg);
+
   background-position: center;
+  font-family: 'Montserrat', sans-serif;
 }
 .header-service-acupuncture {
-  background-image: url(../img/section/header-acupuncture.jpeg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/section/header-acupuncture.jpeg);
+
 }
 .header-service-physiotherapy {
-  background-image: url(../img/section/header-physiotherapy.jpeg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/section/header-physiotherapy.jpeg);
+
 }
 .header-service-chiropractic {
-  background-image: url(../img/section/Chiropractic.jpeg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/section/Chiropractic.jpeg);
+
 }
 .header__head {
   position: absolute;
@@ -42,6 +54,7 @@
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   font-weight: bolder;
+  font-family: 'Montserrat', sans-serif;
 }
 .header__naturopathic {
   height: 70vh;
@@ -64,6 +77,7 @@
   background-image: -webkit-gradient( linear, left top, left bottom, from(rgba(160, 160, 160, 0.799)), to(rgba(97, 187, 107, 0.95))), url(../img/headers/Chiropractic.jpeg);
   background-image: linear-gradient( to bottom, rgba(160, 160, 160, 0.799), rgba(97, 187, 107, 0.95)), url(../img/headers/Chiropractic.jpeg);
 }
+
 /**** End of Headers ****/
 
 @media only screen and (max-width: 901px) {
@@ -292,8 +306,11 @@
 }
 /****Cards in About us****/
 .header-1{
-  background-image: url(../img/feature/1.jpeg);
+  background-image:linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/home.jpeg);
   background-size: cover;
   background-position: center;
   height: 85vh !important;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: bolder;
+  background-color: black;
 }
